app-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
spec:
  selector:
    matchLabels:
      app: vproapp
  replicas: 1
  template:
    metadata:
      labels:
        app: vproapp
    spec:
     containers:
      - name: vproapp
        image: vprofile/vprofileapp
        ports:
        - containerPort: 8080
