vprodbdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  replicas: 1
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
        - name: vprofiledb
          image: vprofile/vprofiledb:V1
          volumeMounts:
            - name: vprodb
              mountPath: /var/lib/mysql
          ports:
           - containerPort: 3306
      nodeSelector:
        zone: ap-south-1a
      volumes:
        - name: vprodb
          awsElasticBlockStore:
            volumeID: vol-05b1e0e9c18095c6e
            fsType: ext4
