vpromq-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromq01
spec:
  selector:
    matchLabels:
      app: vpromq01
  replicas: 1
  template:
    metadata:
      labels:
        app: vpromq01
    spec:
      containers:
      - name: vpromq01
        image: rabitmq:3.8.3-management-alpine
        ports:
        - containerPort: 15672
