app-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-svc
spec:
  type: LoadBalancer
  selector:
    app: vproapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
