app-svc.yml
apiVersion: v1
kind: Service
Metadata:
  name: vproapp-svc
spec:
  type: LoadBalancer
  selector:
    app: vproapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
