mc-CIP.yaml
apiVersion: v1
kind: Service
Metadata:
  name: vprocache01
spec:
  type: ClusterIP
  selector:
    app: vpromc
  ports:
    - protocol: TCP
      port: 11211
      targetPort: 11211
