mq-dep.yml
apiVersion: v1
kind: Service
Metadata:
  name: vpromq
spec:
  type: ClusterIP
  selector:
    app: vpromq01
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672
