vproapp-alb-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-svc
  annotations:
    # Annotations to configure the AWS Load Balancer Controller
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  type: LoadBalancer
  selector:
    app: vproapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
