vproapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vproapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: ipv4
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vproapp
            port: 
              number: 80
